--- a/index.html
+++ b/index.html
@@ -4,23 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script src="./js/script.js"></script>
     <title>Katik Persegi</title>
 </head>
 <body>
     <header>
-        <h1>Kalkulator Luas dan Keliling Persegi</h1>
-        <h4>Welcome to Katik</h4>
-        <p>Web ini digunakan untuk menghitung luas dan keliling persegi dalam rangka menyelesaikan mini project revoU</p>
-
+        <h1><span id="title">Katik </span> <span id="titleStandsFor">Kalkulator Matematik</span></h1>
+        <h2>Welcome to Katik</h2>
+        <p>Anda sedang menggunakan Katik! <br>Ingin menghitung keliling atau luas persegi? Katik siap membantu anda!</p>
     </header>
 
-    <div class="inputSection">
-        <label for="squareSide" id="lblSquareSide">Hitung Luas Persegi</label>
-        <input type="number" id="squareSide">
-    </div>
-    <div class="buttons">
-        <button id="countButton">Hitung</button>
-        <button id="resetButton">Reset</button>
-    </div>
+    <section class="squareArea">
+        <h1 id="squareAreaTitle">Luas Persegi</h1>
+        <hr>
+        <div class="FormulaSection">
+            <img src="https://awsimages.detik.net.id/community/media/visual/2022/08/16/bujur-sangkar.jpeg?w=1037" alt="bujur-sangkar" width="180px" height="180px">
+            <p id="formulaDesc">Rumus Luas Persegi Yaitu :<br> L = S x S <br> <br>
+            Dimana : <br>
+            L = Luas <br>
+            S = Sisi</p>
+            <hr>
+        </div>
+        <div class="inputSection">
+            <label for="squareSide" id="lblSquareSide">Hitung Luas Persegi</label>
+            <input type="number" id="squareSide" placeholder="Masukkan Sisi Persegi">
+        </div>
+        <div class="countDetails">
+            <p id="resultText"></p>
+        </div>
+        <div class="buttons">
+            <button id="countButton" onclick="squareSideCount()">Hitung</button>
+            <button id="resetButton" onclick="resetCount()">Reset</button>
+        </div>
+    </section>
+    
 </body>
 </html>
