--- a/index.html
+++ b/index.html
@@ -14,29 +14,29 @@
         <p>Anda sedang menggunakan Katik! <br>Ingin menghitung keliling atau luas persegi? Katik siap membantu anda!</p>
     </header>
 
-    <section class="squareArea">
-        <h1 id="squareAreaTitle">Luas Persegi</h1>
+    <div class="katikContainer">
+        <h1 id="contentitle">Luas & Keliling Persegi</h1>
         <hr>
         <div class="FormulaSection">
             <img src="https://awsimages.detik.net.id/community/media/visual/2022/08/16/bujur-sangkar.jpeg?w=1037" alt="bujur-sangkar" width="180px" height="180px">
-            <p id="formulaDesc">Rumus Luas Persegi Yaitu :<br> L = S x S <br> <br>
+            <p id="formulaDesc">Rumus Luas & keliling Persegi Yaitu :<br> L = S x S <br> K = 4 x S <br> <br>
             Dimana : <br>
             L = Luas <br>
-            S = Sisi</p>
+            K = Keliling <br>
+            S = Sisi </p>
             <hr>
         </div>
         <div class="inputSection">
-            <label for="squareSide" id="lblSquareSide">Hitung Luas Persegi</label>
+            <label for="squareSide" id="lblSquareSide">Luas & Keliling Persegi</label>
             <input type="number" id="squareSide" placeholder="Masukkan Sisi Persegi">
         </div>
-        <div class="countDetails">
-            <p id="resultText"></p>
-        </div>
         <div class="buttons">
-            <button id="countButton" onclick="squareSideCount()">Hitung</button>
-            <button id="resetButton" onclick="resetCount()">Reset</button>
+            <button id="countAreaButton" onclick="squareAreaCount()">Hitung Luas</button>
+            <button id="countCircumferenceButton" onclick="squareCircumferenceCount()">Hitung Keliling</button> <br> <br>
+            <button id="resetButton" onclick="resetAreaCount()">Reset</button>
         </div>
-    </section>
+        <div id="squareAreaResult"></div>
+    </div>
     
 </body>
 </html>
